# Bethe-Functions

./: OnePointFuncConsole.py  README.md  fixlibrt.script  onePoint.sh  setup.py
One-point and Bethe Functions/: DetFormula.ipynb  GapProb.py
Plots and output files/: plotStdError (job 18789431).txt  plotStdOut (job 18789424).txt  plotStdOut (job 18789428).txt
spinChain/: CMakeLists.txt  README.md  fixlibrt.script  setup.py
spinChain-main/: CMakeLists.txt
spinChain-main/spinChain/: spinChain.py
spinChain-main/src/: compile  defs.h  goldCode.cpp  goldCode.h  gpuCode.cu  gpuCode.cuh  gpuControl.cu  gpuControl.h  pybindWrapper.cpp
spinChain/spinChain/: OnePointFuncConsole.py  spinChain.py
spinChain/spinChain/__pycache__/: spinChain.computeAmplitude-114.py311.1.nbc  spinChain.computeAmplitude-114.py311.nbi  spinChain.computeAmplitude-115.py311.1.nbc  spinChain.computeAmplitude-115.py311.nbi  spinChain.computeBasisTransformMatrices-132.py311.1.nbc  spinChain.computeBasisTransformMatrices-132.py311.nbi  spinChain.computeBasisTransformMatrices-133.py311.1.nbc  spinChain.computeBasisTransformMatrices-133.py311.nbi  spinChain.computeBetheRoots-49.py311.1.nbc  spinChain.computeBetheRoots-49.py311.nbi  spinChain.computeBetheRoots-50.py311.1.nbc  spinChain.computeBetheRoots-50.py311.nbi  spinChain.createInitialSolution-14.py311.1.nbc  spinChain.createInitialSolution-14.py311.nbi  spinChain.createInitialSolution-15.py311.1.nbc  spinChain.createInitialSolution-15.py311.nbi  spinChain.gaudinLikeMatrix-106.py311.1.nbc  spinChain.gaudinLikeMatrix-106.py311.nbi  spinChain.gaudinLikeMatrix-107.py311.1.nbc  spinChain.gaudinLikeMatrix-107.py311.nbi  spinChain.intPower-122.py311.1.nbc  spinChain.intPower-122.py311.nbi  spinChain.intPower-123.py311.1.nbc  spinChain.intPower-123.py311.nbi  spinChain.iterateBetheAnsatz-34.py311.1.nbc  spinChain.iterateBetheAnsatz-34.py311.nbi  (+6 more)
spinChain/src/: compile  defs.h  goldCode.cpp  goldCode.h  gpuCode.cu  gpuCode.cuh  gpuControl.cu  gpuControl.h  pybindWrapper.cpp
